# xyzlabs

./: .gitignore  .gitmodules  1  CMakeLists.txt  CMakePresets.default.json  Changelog.md  Doxyfile  Readme.md  conanfile.py  deps.sh  imgui.ini
cmake/: FindGLFW.cmake  Findimgui.cmake  xyzlabsConfig.cmake.in
example/: CMakeLists.txt  burningforest.cpp  burningforest.hpp  main.cpp
example/include/: burningforest.hpp
example/src/: burningforest.cpp  main.cpp
examples/: CMakeLists.txt
examples/helloworld/: main.cpp
examples/triangle/: main.cpp
include/wave/: continiumwave.hpp  plotwidget.hpp  utils.hpp
include/xyzlabs/: analysiswidget.hpp  assert.hpp  burningforest.hpp  constants.hpp  dataflowwidget.hpp  defaultintrowidget.hpp  dialog.hpp  event.hpp  eventmanager.hpp  floatingwidget.hpp  framebuffer.hpp  globals.hpp  idgenerator.hpp  introwidget.hpp  object.hpp  objectregistry.hpp  oncetask.hpp  openglbackend.hpp  openglwidget.hpp  operators.hpp  periodictask.hpp  plotwidget.hpp  randomgenerator.hpp  relativelayout.hpp  result.hpp  resultmanager.hpp  setting.hpp  settings.hpp  settingsmanager.hpp  settingswidget.hpp  shape.hpp  sidebarcontainer.hpp  sinusflowwidget.hpp  tabwidget.hpp  task.hpp  taskmanager.hpp  utils.hpp  version.hpp  widget.hpp  widgetmanager.hpp  (+3 more)
include/xyzlabs/event/: event.hpp  eventmanager.hpp
include/xyzlabs/settings/: setting.hpp  settingbase.hpp  settinginterface.hpp  settingsgroup.hpp  settingsmanager.hpp
include/xyzlabs/task/: periodictask.hpp  taskmanager.hpp
include/xyzlabs/ui/: button.hpp  dialog.hpp  relativelayout.hpp  settingswidget.hpp  styledbutton.hpp  tabwidget.hpp  widget.hpp
include/xyzlabs/utils/: operators.hpp  randomgenerator.hpp
include/xyzlabs3d/: coordinatesystem.hpp  types.hpp  viewportwidget.hpp
profiles/: clang
scripts/: static-analysis.h
src/triangle/: main.cpp
src/wave/: continiumwave.cpp  main.cpp  plotwidget.cpp
src/xyzlabs/: analysiswidget.cpp  burningforest.cpp  dataflowwidget.cpp  defaultintrowidget.cpp  dialog.cpp  eventmanager.cpp  floatingwidget.cpp  framebuffer.cpp  globals.cpp  introwidget.cpp  main.cpp  object.cpp  objectregistry.cpp  openglwidget.cpp  operators.cpp  periodictask.cpp  plotwidget.cpp  relativelayout.cpp  resultmanager.cpp  setting.cpp  settingsmanager.cpp  settingswidget.cpp  shape.cpp  sidebarcontainer.cpp  sinusflowwidget.cpp  tabwidget.cpp  taskmanager.cpp  widget.cpp  widgetmanager.cpp  window.cpp  windowmanager.cpp  xyzlabs.cpp
src/xyzlabs/event/: eventmanager.cpp
src/xyzlabs/settings/: setting.cpp  settingsgroup.cpp  settingsmanager.cpp
src/xyzlabs/task/: periodictask.cpp  taskmanager.cpp
src/xyzlabs/ui/: button.cpp  dialog.cpp  relativelayout.cpp  settingswidget.cpp  styledbutton.cpp  tabwidget.cpp  widget.cpp
src/xyzlabs/utils/: operators.cpp
src/xyzlabs3d/: coordinatesystem.cpp  viewportwidget.cpp
tests/: CMakeLists.txt  main.cpp  test_eventmanager.cpp  test_objectregistry.cpp  test_relativelayout.cpp  test_settingsgroup.cpp
